fixed flicker, added volume meter, mute/unmute on streams

--- a/src/styles.module.css
+++ b/src/styles.module.css
@@ -4,6 +4,14 @@
   background-color: black;
 }
 
+.stream {
+  position: relative;
+}
+
+.stream:hover .icon {
+  visibility: visible;
+}
+
 .main {
   height: 100vh;
   display: flex;
@@ -34,4 +42,43 @@
 .thumbs > section > div > video {
   height: 100px;
   display: block;
+}
+
+.hidden {
+  display: none;
+}
+
+.icon {
+  width: 20px;
+  visibility: hidden;
+}
+
+.volume {
+  max-height: 300px;
+  height: 100%;
+  position: absolute;
+  bottom: 0px;
+  z-index: 10;
+  display: flex;
+  align-items: flex-end;
+}
+
+.volumeMeter {
+  height: 100%;
+  width: 8px;
+  position: relative;
+  overflow: hidden;
+}
+
+.volumeBar {
+  position: absolute;
+  background-color: rgb(95,171,9);
+  width: 8px;
+  bottom: 0px;
+}
+
+.muteButton {
+  background: none;
+  border: none;
+  padding: 5px;
 }
